[gd_scene load_steps=36 format=2]

[ext_resource path="res://backgrounds/backgroundCastles.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://characters/aliens/alien_pink.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/digital_sfx/source/phaseJump1.ogg" type="AudioStream" id=4]
[ext_resource path="res://tileset.png" type="Texture" id=6]
[ext_resource path="res://coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD.gd" type="Script" id=9]
[ext_resource path="res://interface/fonts/kenvector_future_32.tres" type="DynamicFont" id=10]
[ext_resource path="res://items/flagRed.png" type="Texture" id=11]
[ext_resource path="res://enemy2.tscn" type="PackedScene" id=12]
[ext_resource path="res://hook.tscn" type="PackedScene" id=13]
[ext_resource path="res://platform.gd" type="Script" id=14]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun1.png" type="Texture" id=15]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun4.png" type="Texture" id=16]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun4.png" type="Texture" id=17]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun2.png" type="Texture" id=18]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun3.png" type="Texture" id=19]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun3.png" type="Texture" id=20]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun6.png" type="Texture" id=21]
[ext_resource path="res://marine/With Helm/Jump with Gun/sprites/jump-with-gun1.png" type="Texture" id=22]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun8.png" type="Texture" id=23]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun9.png" type="Texture" id=24]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun10.png" type="Texture" id=25]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun5.png" type="Texture" id=26]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun7.png" type="Texture" id=27]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun2.png" type="Texture" id=28]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun1.png" type="Texture" id=29]

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 80, 0, 16, 72, 16, 72, 64, 80, 64, 80, 80 )

[sub_resource type="TileSet" id=8]
0/name = "tileset.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 80, 112 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 9 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 112, 32, 80, 112 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 208, 32, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tileset.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 240, 16, 64, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "tileset.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 320, 16, 64, 48 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tileset.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 400, 32, 16, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tileset.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 432, 32, 16, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "tileset.png 7"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 464, 32, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tileset.png 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 480, 80, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "tileset.png 9"
9/texture = ExtResource( 6 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 400, 80, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "tileset.png 10"
10/texture = ExtResource( 6 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 320, 80, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "tileset.png 11"
11/texture = ExtResource( 6 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 240, 80, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "tileset.png 12"
12/texture = ExtResource( 6 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 208, 80, 16, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 15 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 28 ), ExtResource( 20 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48.2238, 37.4729 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 73.089, 19.7121 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 150, 100 )

[node name="main" type="Node2D"]

[node name="parallax_background" type="ParallaxBackground" parent="."]

[node name="parallax_layer" type="ParallaxLayer" parent="parallax_background"]
visible = false
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 1024, 0 )

[node name="backgroundCastles" type="Sprite" parent="parallax_background/parallax_layer"]
visible = false
position = Vector2( 511.998, -2.88187 )
texture = ExtResource( 1 )

[node name="tile_map" type="TileMap" parent="."]
position = Vector2( -11, 0 )
tile_set = SubResource( 8 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 393295, 3, 0, 524347, 0, 0, 524357, 1, 0, 524361, 7, 0, 589898, 4, 0, 720960, 9, 0, 720963, 9, 0, 720967, 10, 0, 720971, 11, 0, 720977, 12, 0, 720978, 6, 0, 852032, 5, 0, 852050, 5, 0, 1179722, 10, 0, 1310798, 5, 0 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 988, 122 )
collision_mask = 31
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="alien_pink" parent="player" instance=ExtResource( 3 )]
visible = false
playing = true

[node name="collision_shape_2d" type="CollisionShape2D" parent="player"]
position = Vector2( -0.158997, -13.7108 )
shape = SubResource( 1 )

[node name="camera_2d" type="Camera2D" parent="player"]
current = true
limit_left = 0
limit_top = -300
limit_bottom = 500

[node name="phaseJump1" type="AudioStreamPlayer" parent="player"]
stream = SubResource( 2 )

[node name="marine" type="AnimatedSprite" parent="player"]
position = Vector2( -0.658997, -22.7108 )
frames = SubResource( 7 )
animation = "run"
frame = 6
playing = true

[node name="coins" type="Node2D" parent="."]

[node name="coin8" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1570, 50 )

[node name="coin7" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1520, 10 )

[node name="coin" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 280, 290 )

[node name="coin2" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 330, 290 )

[node name="coin3" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 380, 290 )

[node name="coin4" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 660, 170 )

[node name="coin5" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 870, 40 )

[node name="coin6" parent="coins" instance=ExtResource( 7 )]
position = Vector2( 1470, -40 )

[node name="goal" type="Area2D" parent="coins"]
position = Vector2( 1412.66, -436.587 )
__meta__ = {
"_edit_group_": true
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="coins/goal"]
shape = SubResource( 4 )

[node name="flagRed" type="Sprite" parent="coins/goal"]
position = Vector2( -1.50653, 2.78497 )
texture = ExtResource( 11 )

[node name="platform" type="KinematicBody2D" parent="coins"]
position = Vector2( -73.9509, 0.786713 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="coins/platform"]
position = Vector2( 1099.04, -54.2832 )
shape = SubResource( 5 )

[node name="color_rect" type="ColorRect" parent="coins/platform"]
margin_left = 1026.82
margin_top = -74.0699
margin_right = 1172.82
margin_bottom = -34.0699
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="label" type="Label" parent="HUD"]
margin_right = 70.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "SCORE"

[node name="score" type="Label" parent="HUD"]
margin_left = 160.0
margin_right = 295.0
margin_bottom = 36.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="HUD"]
margin_left = 240.516
margin_right = 375.516
margin_bottom = 36.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_button" type="TouchScreenButton" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.54902 )
position = Vector2( 150, 500 )
shape = SubResource( 6 )
passby_press = true
visibility_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="color_rect" type="ColorRect" parent="HUD/left_button"]
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
color = Color( 0, 0, 1, 0.486275 )

[node name="label2" type="Label" parent="HUD/left_button"]
margin_left = -50.0
margin_top = -15.5
margin_right = 85.0
margin_bottom = 20.5
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "LEFT"

[node name="right_button" type="TouchScreenButton" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.54902 )
position = Vector2( 480, 500 )
shape = SubResource( 6 )
passby_press = true
visibility_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="color_rect" type="ColorRect" parent="HUD/right_button"]
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
color = Color( 0, 0, 1, 0.486275 )

[node name="label2" type="Label" parent="HUD/right_button"]
margin_left = -50.0
margin_top = -15.5
margin_right = 85.0
margin_bottom = 20.5
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "RIGHT"

[node name="jump_button" type="TouchScreenButton" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.54902 )
position = Vector2( 870, 500 )
shape = SubResource( 6 )
passby_press = true
visibility_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="color_rect" type="ColorRect" parent="HUD/jump_button"]
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
color = Color( 0, 0, 1, 0.486275 )

[node name="label2" type="Label" parent="HUD/jump_button"]
margin_left = -50.0
margin_top = -15.5
margin_right = 85.0
margin_bottom = 20.5
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "JUMP"

[node name="enemy2" parent="." instance=ExtResource( 12 )]
position = Vector2( 359.63, 228.939 )
SPEED = 100

[node name="damped_spring_joint_2d" type="DampedSpringJoint2D" parent="."]
position = Vector2( 819, -46 )
rotation = 1.59306

[node name="hook" parent="." instance=ExtResource( 13 )]
position = Vector2( 934, 107 )
collision_layer = 1
collision_mask = 0

[node name="hook_line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )

[connection signal="body_entered" from="coins/goal" to="player" method="_on_goal_body_entered"]
[connection signal="pressed" from="HUD/left_button" to="HUD" method="_on_left_button_pressed"]
[connection signal="released" from="HUD/left_button" to="HUD" method="_on_left_button_released"]
[connection signal="pressed" from="HUD/right_button" to="HUD" method="_on_right_button_pressed"]
[connection signal="released" from="HUD/right_button" to="HUD" method="_on_right_button_released"]
[connection signal="pressed" from="HUD/jump_button" to="HUD" method="_on_jump_button_pressed"]
[connection signal="released" from="HUD/jump_button" to="HUD" method="_on_jump_button_released"]
